--- a/app/src/main/res/layout/fragment_onboarding1.xml
+++ b/app/src/main/res/layout/fragment_onboarding1.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Onboarding1Fragment">
+    android:background="#4CAF50"
+    android:padding="32dp">
 
     <ImageView
         android:id="@+id/imagen"
@@ -12,10 +12,10 @@
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:src="@drawable/onboarding1"
-        app:layout_constraintBottom_toTopOf="@id/texto"
+        app:layout_constraintBottom_toTopOf="@+id/texto"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
     <TextView
         android:id="@+id/texto"
@@ -27,7 +27,7 @@
         app:layout_constraintBottom_toTopOf="@+id/botonSiguiente"
         app:layout_constraintTop_toBottomOf="@id/imagen"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>/>
+        app:layout_constraintRight_toRightOf="parent"/>
 
     <Button
         android:id="@+id/botonSiguiente"
