--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -5,6 +5,7 @@
     android:id="@+id/nav_graph"
     app:startDestination="@id/onboarding1Fragment">
 
+
     <fragment
         android:id="@+id/onboarding1Fragment"
         android:name="com.example.practica5.Onboarding1Fragment"
@@ -12,7 +13,11 @@
         tools:layout="@layout/fragment_onboarding1" >
         <action
             android:id="@+id/action_onboarding1Fragment_to_onboarding2Fragment"
-            app:destination="@id/onboarding2Fragment" />
+            app:destination="@id/onboarding2Fragment"
+            app:enterAnim="@anim/slide_in_rigth"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_rigth" />
     </fragment>
     <fragment
         android:id="@+id/onboarding2Fragment"
@@ -21,7 +26,12 @@
         tools:layout="@layout/fragment_onboarding2" >
         <action
             android:id="@+id/action_onboarding2Fragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
+            app:destination="@id/homeFragment"
+            app:enterAnim="@anim/slide_in_rigth"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_rigth"
+            />
     </fragment>
     <fragment
         android:id="@+id/homeFragment"
