--- a/app/src/main/res/layout/fragment_onboarding0.xml
+++ b/app/src/main/res/layout/fragment_onboarding0.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#4CAF50"
+    android:background="#9C27B0"
     android:padding="32dp">
 
     <ImageView
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
-        android:src="@drawable/onboarding1"
+        android:src="@drawable/undraw_mobile_content_xvgr"
         app:layout_constraintBottom_toTopOf="@+id/texto"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -21,10 +21,10 @@
         android:id="@+id/texto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="!Discover the garlic soup!"
+        android:text="!God n'hi do!"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
-        android:layout_margin="50dp"
+        android:layout_margin="70dp"
         app:layout_constraintBottom_toTopOf="@+id/botonSiguiente"
         app:layout_constraintTop_toBottomOf="@id/imagen"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -34,12 +34,12 @@
         android:id="@+id/botonSiguiente"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="#FFEB3B"
-        android:text="Next"
-        app:layout_constraintTop_toBottomOf="@id/texto"
+        android:backgroundTint="#4CAF50"
+        android:text="START!"
         app:layout_constraintBottom_toBottomOf="@id/botonSiguiente"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/texto" />
 
     <Button
         android:id="@+id/botonSkip"
