--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/onboarding1Fragment">
+    app:startDestination="@id/onboarding0Fragment">
 
 
     <fragment
@@ -18,6 +18,13 @@
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_rigth" />
+        <action
+            android:id="@+id/action_onboarding1Fragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:enterAnim="@anim/borrado"
+            app:exitAnim="@anim/nav_default_pop_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_exit_anim"
+            app:popExitAnim="@anim/nav_default_pop_enter_anim"/>
     </fragment>
     <fragment
         android:id="@+id/onboarding2Fragment"
@@ -38,4 +45,26 @@
         android:name="com.example.practica5.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
+    <fragment
+        android:id="@+id/onboarding0Fragment"
+        android:name="com.example.practica5.onboarding0Fragment"
+        android:label="fragment_onboarding0"
+        tools:layout="@layout/fragment_onboarding0" >
+
+        <action
+            android:id="@+id/action_onboarding0Fragment_to_onboarding1Fragment"
+            app:destination="@id/onboarding1Fragment"
+            app:enterAnim="@anim/slide_in_rigth"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_rigth"
+            />
+        <action
+            android:id="@+id/action_onboarding0Fragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:enterAnim="@anim/borrado"
+            app:exitAnim="@anim/nav_default_pop_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_exit_anim"
+            app:popExitAnim="@anim/nav_default_pop_enter_anim"/>
+    </fragment>
 </navigation>
